--- a/packages/ue_admin/package.json
+++ b/packages/ue_admin/package.json
@@ -19,6 +19,7 @@
     "elkjs": "^0.8.2",
     "gitart-vue-dialog": "^2.4.0",
     "handlebars": "^4.7.7",
+    "jsondiffpatch": "^0.6.0",
     "jsoneditor": "^9.9.0",
     "jsonpath-plus": "^7.2.0",
     "lodash": "^4.17.21",
@@ -31,19 +32,19 @@
     "vue": "3.3.4",
     "vue-clipboard3": "^2.0.0",
     "vue-router": "4.2.4",
-    "web-worker": "^1.2.0"
+    "web-worker": "^1.2.0",
+    "x-data-spreadsheet": "^1.1.9"
   },
   "devDependencies": {
     "@types/debug": "^4.1.7",
     "@types/jsoneditor": "^9.5.1",
     "@types/lodash": "^4.14.182",
     "@types/node": "20.5.9",
-    "@vitejs/plugin-vue": "4.0.0",
+    "@vitejs/plugin-vue": "5.0.4",
     "autoprefixer": "^10.4.5",
+    "less": "^4.2.0",
     "postcss": "^8.4.12",
     "sass": "^1.50.1",
-    "stylelint": "^14.8.0",
-    "stylelint-config-standard": "^29.0.0",
     "tailwindcss": "^3.2.4",
     "typescript": "5.2.2",
     "vite": "5.0.11",
