--- a/packages/ue_admin/package.json
+++ b/packages/ue_admin/package.json
@@ -25,6 +25,7 @@
     "lodash": "^4.17.21",
     "mitt": "^3.0.0",
     "pinia": "^2.1.6",
+    "socket.io-client": "4.7.2",
     "tms-koa-crypto": "^0.2.5",
     "tms-template-viz": "^0.0.11",
     "tms-vue3": "^0.0.5",
