避免启动时覆盖用户指定的settings.json文件

--- a/docker/ue_admin/settings.sample.json
+++ b/docker/ue_admin/settings.sample.json
@@ -1,8 +1,3 @@
 {
-  "authApiBase": "auth",
-  "authApiPort": 3030,
-  "backApiBase": "api",
-  "backApiPort": 3030,
-  "backPushPort": 3031,
-  "loginCaptchaDisabled": true
+  "backPushPort": 3031 
 }
