--- a/packages/ue_admin/package.json
+++ b/packages/ue_admin/package.json
@@ -20,7 +20,7 @@
     "gitart-vue-dialog": "^3.1.0",
     "handlebars": "^4.7.7",
     "jsondiffpatch": "^0.6.0",
-    "jsoneditor": "^10.0.1",
+    "jsoneditor": "10.0.1",
     "jsonpath-plus": "^8.0.0",
     "jsonpointer": "^5.0.1",
     "lodash": "^4.17.21",
@@ -29,8 +29,8 @@
     "socket.io-client": "4.7.2",
     "tms-koa-crypto": "^0.2.5",
     "tms-template-viz": "^0.0.11",
-    "tms-vue3": "^0.0.5",
-    "tms-vue3-ui": "^0.0.87",
+    "tms-vue3": "^0.0.6",
+    "tms-vue3-ui": "^0.0.88",
     "vue": "3.3.4",
     "vue-clipboard3": "^2.0.0",
     "vue-router": "4.2.4",
@@ -39,7 +39,7 @@
   },
   "devDependencies": {
     "@types/debug": "^4.1.7",
-    "@types/jsoneditor": "^9.9.5",
+    "@types/jsoneditor": "9.9.5",
     "@types/lodash": "^4.14.182",
     "@types/node": "20.5.9",
     "@vitejs/plugin-vue": "5.0.4",
@@ -50,6 +50,6 @@
     "tailwindcss": "^3.2.4",
     "typescript": "5.2.2",
     "vite": "5.0.11",
-    "vue-tsc": "1.8.8"
+    "vue-tsc": "2.0.6"
   }
 }
