--- a/packages/ue_plugin/package.json
+++ b/packages/ue_plugin/package.json
@@ -11,17 +11,17 @@
   },
   "dependencies": {
     "element-plus": "2.5.0",
-    "jsoneditor": "^9.9.0",
+    "jsoneditor": "10.0.1",
     "pinia": "2.1.6",
     "pinyin-pro": "^3.16.4",
-    "tms-vue3-ui": "^0.0.87",
+    "tms-vue3-ui": "^0.0.88",
     "vue": "3.3.4",
     "vue-router": "4.2.4",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@types/jsoneditor": "^9.5.1",
-    "@types/node": "^20.5.9",
+    "@types/jsoneditor": "9.9.5",
+    "@types/node": "20.5.9",
     "@vitejs/plugin-vue": "5.0.4",
     "autoprefixer": "^10.4.5",
     "postcss": "^8.4.12",
@@ -29,6 +29,6 @@
     "tailwindcss": "^3.0.24",
     "typescript": "5.2.2",
     "vite": "5.0.11",
-    "vue-tsc": "1.8.8"
+    "vue-tsc": "2.0.6"
   }
 }
