--- a/packages/tmw-back/package.json
+++ b/packages/tmw-back/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@types/lodash": "^4.14.182",
     "@types/node": "20.5.9",
-    "rimraf": "^5.0.1"
+    "rimraf": "^5.0.1",
+    "typescript": "5.5.0-dev.20240326"
   }
 }
