--- a/packages/ue_admin/package.json
+++ b/packages/ue_admin/package.json
@@ -35,7 +35,8 @@
     "vue-clipboard3": "^2.0.0",
     "vue-router": "4.2.4",
     "web-worker": "^1.2.0",
-    "x-data-spreadsheet": "^1.1.9"
+    "x-data-spreadsheet": "^1.1.9",
+    "minimist": ">=1.2.6"
   },
   "devDependencies": {
     "@types/debug": "^4.1.7",
@@ -49,7 +50,8 @@
     "sass": "^1.50.1",
     "tailwindcss": "^3.2.4",
     "typescript": "5.2.2",
-    "vite": "5.0.11",
-    "vue-tsc": "2.0.6"
+    "vite": "5.0.13",
+    "vue-tsc": "2.0.6",
+    "@babel/core": ">=7.23.2"
   }
 }
