--- a/packages/ue_plugin/package.json
+++ b/packages/ue_plugin/package.json
@@ -17,7 +17,7 @@
     "tms-vue3-ui": "^0.0.89",
     "vue": "3.3.4",
     "vue-router": "4.2.4",
-    "xlsx": "^0.18.5"
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.2/xlsx-0.20.2.tgz"
   },
   "devDependencies": {
     "@types/jsoneditor": "9.9.5",
@@ -28,7 +28,7 @@
     "sass": "^1.50.1",
     "tailwindcss": "^3.0.24",
     "typescript": "5.2.2",
-    "vite": "5.0.11",
+    "vite": "5.0.13",
     "vue-tsc": "2.0.6"
   }
 }
